--- a/style.css
+++ b/style.css
@@ -27,6 +27,9 @@ body.dark-mode {
     background-color: var(--bg-color-dark);
     color: var(--text-color-dark);
 }
+body.no-scroll {
+    overflow: hidden;
+}
 
 header {
     background-color: var(--primary-color);
@@ -41,8 +44,9 @@ header {
     left: -300px;
     top: 0;
     width: 300px;
-    height: 200%;
+    height: 5000px;
     padding: 20px;
+    padding-bottom: 500px;
     transition: left 0.4s ease;
     z-index: 1000;
     color: white;
