--- a/style.css
+++ b/style.css
@@ -71,6 +71,18 @@ section {
     margin-bottom: 40px;
 }
 
+#image-upload {
+    margin-bottom: 40px;
+}
+
+#imageOutput img {
+    max-width: 100%;
+    height: auto;
+    border: 2px solid var(--primary-color);
+    border-radius: var(--border-radius);
+}
+
+
 
 button {
     background-color: var(--primary-color);
